[tool.poetry]
name = "cactus_accounts_core"
version = "0.0.1"
description = ""
authors = ["Matias G. Sticchi <matgs656@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-cors-headers = "^3.10.0"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
